--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <div class="hero__card">
           <h1 class="hero__title">
-            Unlimited Movies TV,<br />
+            Unlimited DevOps Video,<br />
             Shows and More.
           </h1>
           <p class="hero__subtitle">Watch anywhere and cancel anytime.</p>
