--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
         <div class="hero__card">
           <h1 class="hero__title">
-            Register for 100-Day DevOps Master Class,<br />
-            Shows and More.
+            100-Day DevOps Master Class,<br />
+            Register Now.
           </h1>
           <p class="hero__subtitle">Watch anywhere and cancel anytime.</p>
           <p class="hero__description">
