--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <div class="hero__card">
           <h1 class="hero__title">
-            100-Day DevOps Master Class,<br />
+            Netflix Demo Website,<br />
             Register Now.
           </h1>
           <p class="hero__subtitle">Watch anywhere and cancel anytime.</p>
