--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
 
         <div class="hero__card">
           <h1 class="hero__title">
-            Netflix Demo Website,<br />
-            Register Now.
+            Happywala Engineer
           </h1>
           <p class="hero__subtitle">Watch anywhere and cancel anytime.</p>
           <p class="hero__description">
